# Wasabi

./: .gitignore  .gitmodules  .leu  CMakeLists.txt  Doxyfile  Makefile  README.md  Wasabi.sln  _bullet_debugger_8hpp_source.html  _w_animation_8hpp.html  _w_animation_8hpp_source.html  _w_backface_depth_render_stage_8hpp_source.html  _w_base_8hpp.html  _w_base_8hpp_source.html  _w_buffered_buffer_8hpp_source.html  _w_buffered_frame_buffer_8hpp_source.html  _w_buffered_image_8hpp_source.html  _w_bullet_physics_8hpp_source.html  _w_bullet_rigid_body_8hpp.html  _w_bullet_rigid_body_8hpp_source.html  _w_camera_8hpp.html  _w_camera_8hpp_source.html  _w_common_8hpp_source.html  _w_compatibility_8hpp.html  _w_compatibility_8hpp_source.html  _w_core_8hpp.html  _w_core_8hpp_source.html  _w_deferred_renderer_8hpp.html  _w_deferred_renderer_8hpp_source.html  _w_effect_8hpp.html  _w_effect_8hpp_source.html  _w_error_8hpp.html  _w_error_8hpp_source.html  _w_file_8hpp.html  _w_file_8hpp_source.html  _w_forward_render_stage_8hpp_source.html  _w_forward_renderer_8hpp.html  _w_forward_renderer_8hpp_source.html  _w_g_buffer_render_stage_8hpp_source.html  _w_g_l_f_w_window_and_input_component_8hpp_source.html  (+442 more)
CMake/: Assimp.cmake  Boxer.cmake  Bullet.cmake  BundleStaticLibraries.cmake  GLFW.cmake  GLSL.cmake  LinkToWasabi.cmake  Loguru.cmake  OpenAL.cmake  STB.cmake  WasabiHelpers.cmake  dist.cmake  tinyfiledialogs.cmake  tokenize_bullet_libraries.py
FBX Loader/: FBX Loader.vcxproj  FBX Loader.vcxproj.filters  main.cpp  main.h  parse_animation.cpp  parse_mesh.cpp  util.cpp  util.h
Media/: WFile.WSBI  dante.HXM
Wasabi/: Common.h  Main.cpp  Makefile  WAnimation.cpp  WAnimation.h  WBase.cpp  WBase.h  WCamera.cpp  WCamera.h  WCore.cpp  WCore.h  WDeferredRenderer.cpp  WDeferredRenderer.h  WEffect.cpp  WEffect.h  WError.cpp  WError.h  WForwardRenderer.cpp  WForwardRenderer.h  WGeometry.cpp  WGeometry.h  WHavokPhysics.cpp  WHavokPhysics.h  WIC_Win32.cpp  WIC_Win32.h  WImage.cpp  WImage.h  WImages.cpp  WImages.h  WInputComponent.h  WLight.cpp  WLight.h  WManager.h  WMaterial.cpp  WMaterial.h  WMath.cpp  WMath.h  WObject.cpp  WObject.h  WObjects.cpp  (+27 more)
Wasabi Test/: Animation.cpp  Animation.hpp  Instancing.cpp  Instancing.hpp  Lights.hpp  Main.cpp  RenderTargetTexture.cpp  RenderTargetTexture.hpp  Sound.cpp  Sound.hpp  TestSuite.cpp  TestSuite.h  TestSuite.hpp  Tests.cpp  Wasabi Test.vcxproj  Wasabi Test.vcxproj.filters
Wasabi Test/Animation/: Animation.cpp  Animation.hpp
Wasabi Test/Files/: Files.cpp  Files.hpp
docs/: Doxyfile  header.html  mainpage.dox
html/: _core_8h_source.html  _w_animation_8h.html  _w_animation_8h_source.html  _w_base_8h.html  _w_base_8h_source.html  _w_camera_8h.html  _w_camera_8h_source.html  _w_core_8h.html  _w_core_8h_source.html  _w_deferred_renderer_8h_source.html  _w_effect_8h.html  _w_effect_8h_source.html  _w_error_8h.html  _w_error_8h_source.html  _w_forward_renderer_8h_source.html  _w_geometry_8h.html  _w_geometry_8h_source.html  _w_havok_physics_8h_source.html  _w_i_c___win32_8h.html  _w_i_c___win32_8h_source.html  _w_image_8h.html  _w_image_8h_source.html  _w_input_component_8h.html  _w_input_component_8h_source.html  _w_light_8h.html  _w_light_8h_source.html  _w_manager_8h_source.html  _w_material_8h_source.html  _w_math_8h_source.html  _w_object_8h.html  _w_object_8h_source.html  _w_orientation_8h.html  _w_orientation_8h_source.html  _w_physics_component_8h_source.html  _w_render_target_8h.html  _w_render_target_8h_source.html  _w_renderer_8h_source.html  _w_skeletal_animation_8h.html  _w_skeletal_animation_8h_source.html  _w_sound_8h_source.html  (+442 more)
latex/: _w_animation_8h.tex  _w_base_8h.tex  _w_camera_8h.tex  _w_core_8h.tex  _w_effect_8h.tex  _w_error_8h.tex  _w_geometry_8h.tex  _w_i_c___win32_8h.tex  _w_image_8h.tex  _w_input_component_8h.tex  _w_light_8h.tex  _w_object_8h.tex  _w_orientation_8h.tex  _w_render_target_8h.tex  _w_skeletal_animation_8h.tex  _w_timer_8h.tex  _w_utilities_8h.tex  _wasabi_8h.tex  annotated.tex  bug.tex  class_animation_demo.eps  class_animation_demo.tex  class_deferred_renderer_p_s.eps  class_deferred_renderer_p_s.tex  class_deferred_renderer_v_s.eps  class_deferred_renderer_v_s.tex  class_f_b_x_loader.eps  class_f_b_x_loader.tex  class_forward_renderer_p_s.eps  class_forward_renderer_p_s.tex  class_forward_renderer_v_s.eps  class_forward_renderer_v_s.tex  class_instancing_demo.eps  class_instancing_demo.tex  class_kofta.eps  class_kofta.tex  class_sprite_geometry.eps  class_sprite_geometry.tex  class_sprite_p_s.eps  class_sprite_p_s.tex  (+246 more)
media/: .gitignore  dante.WSBI
samples/vertagon/: CMakeLists.txt  README.md
samples/vertagon/CMake/: LinkToWasabi.cmake
samples/vertagon/include/FPS/: common.hpp  enemies.hpp  game.hpp  map.hpp  player.hpp
samples/vertagon/include/vertagon/: common.hpp  enemies.hpp  game.hpp  map.hpp  player.hpp
samples/vertagon/include/vertagon/map/: map.hpp  platforms.hpp  sky.hpp  water.hpp
samples/vertagon/include/vertagon/spells/: explosion.hpp  fireball.hpp  spells.hpp
samples/vertagon/src/: compile-glsl-code.py
samples/vertagon/src/FPS/: enemies.cpp  game.cpp  map.cpp  player.cpp
samples/vertagon/src/FPS/shaders/: enemy.frag.glsl
samples/vertagon/src/vertagon/: enemies.cpp  game.cpp  map.cpp  player.cpp
samples/vertagon/src/vertagon/map/: map.cpp  platforms.cpp  sky.cpp  water.cpp
samples/vertagon/src/vertagon/shaders/: enemy.frag.glsl  enemy.vert.glsl  sky.frag.glsl  sky.vert.glsl
samples/vertagon/src/vertagon/spells/: explosion.cpp  fireball.cpp  spells.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+52 more)
src/: compile-glsl-code.py  spv-converter.py
(+518 files in other folders)
